--- a/footballdb-clubs/Rakefile
+++ b/footballdb-clubs/Rakefile
@@ -8,7 +8,7 @@ Hoe.spec 'footballdb-clubs' do
   self.summary = "footballdb-clubs - the world's top football clubs"
   self.description = summary
 
-  self.urls = ['https://github.com/sportdb/sport.db']
+  self.urls = ['https://github.com/sportdb/football.db']
 
   self.author = 'Gerald Bauer'
   self.email = 'opensport@googlegroups.com'
@@ -20,8 +20,8 @@ Hoe.spec 'footballdb-clubs' do
   self.licenses = ['Public Domain']
 
   self.extra_deps = [
-    ['sportdb-clubs',   '>= 0.4.5'],
-    ['fifa',            '>= 2019.11.27'],
+    ['sportdb-formats', '>= 1.0.1'],
+    ['fifa',            '>= 2020.5.10'],
   ]
 
   self.spec_extras = {
