--- a/fifa/Rakefile
+++ b/fifa/Rakefile
@@ -8,7 +8,7 @@ Hoe.spec 'fifa' do
   self.summary = "fifa - the world's football countries and codes (incl. non-member countries and irregular codes)"
   self.description = summary
 
-  self.urls = ['https://github.com/sportdb/football.db']
+  self.urls = { home: 'https://github.com/sportdb/football.db' }
 
   self.author = 'Gerald Bauer'
   self.email = 'opensport@googlegroups.com'
